# CudaMatrix

./: CMakeLists.txt  main.cu  readme.MD  test.cu
matrix/: Matrix.cu  Matrix.cuh
matrix/operations/: Addition.cu  AdditionScalar.cu  Clip.cu  DivisionScalar.cu  Exp.cu  Logit.cu  Multiplication.cu  MultiplicationHadamard.cu  MultiplicationScalar.cu  RandomFill.cu  Sigmoid.cu  Softmax.cu  Subtraction.cu  SubtractionScalar.cu  SubtractionScalarInverse.cu  SumAll.cu  Tanh.cu  Transpose.cu
neural/: NeuralNetwork.cu  NeuralNetwork.cuh
